2007-11-21  Kaz Kojima  <kkojima@gcc.gnu.org>

	PR target/34155
	* config/sh/sh.md (binary_sf_op): Remove.
	(binary_sf_op0, binary_sf_op1): New define_insn_and_split.
	* config/sh/sh.c (sh_expand_binop_v2sf): Use gen_binary_sf_op0
	and gen_binary_sf_op1.

2007-11-21  Hans-Peter Nilsson  <hp@axis.com>

	* regclass.c (init_reg_autoinc): Fix typo preventing test of
	secondary output reload when setting forbidden_inc_dec_class.

2007-11-21  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/34148
	* tree-ssa-structalias.c (create_variable_info_for): Do not use
	field-sensitive PTA for single-element structures.
	* tree-ssa-alias.c (create_overlap_variables_for): Do not create
	SFTs for single-element structures.

2007-11-20  Richard Guenther  <rguenther@suse.de>

	PR middle-end/34154
	* gimplify.c (gimplify_switch_expr): Use tree_int_cst_lt instead
	of the signed INT_CST_LT.
	* stmt.c (expand_case): Likewise.
	(estimate_case_costs): Likewise.

2007-11-20  Rask Ingemann Lambertsen  <rask@sygehus.dk>

	* read-rtl.c (fatal_expected_char): Print EOF as text rather that
	its binary representation.

2007-11-20  Richard Guenther  <rguenther@suse.de>

	* tree-ssa-operands.c (add_virtual_operand): Consistently prune
	accesses.

2007-11-20  Thiemo Seufer  <ths@mips.com>

	* config/mips/mips.c (mips_file_start): Add support for
	flagging 32-bit code with -mfp64 floating-point.

2007-11-20  Jakub Jelinek  <jakub@redhat.com>

	PR c/34146
	* c-gimplify.c (optimize_compound_literals_in_ctor): New function.
	(c_gimplify_expr): Use it.

2007-11-20  Ben Elliston  <bje@au.ibm.com>

	* config/spu/spu_mfcio.h: Fix typo.

2007-11-20  Ben Elliston  <bje@au.ibm.com>

	* unwind.inc: Comment that unwind-sjlj.c includes this file.

2007-11-20  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>
	    Ben Elliston  <bje@au.ibm.com>

	* config/spu/mfc_tag_release.c: New file.
	* config/spu/mfc_multi_tag_release.c: Likewise.
	* config/spu/mfc_multi_tag_reserve.c: Likewise.